@@ -1,5 +1,9 @@
 2020-02-20  Joseph Myers  <joseph@codesourcery.com>
 
+	* src/arch-aarch64.c: Fix formatting.
+
+2020-02-20  Joseph Myers  <joseph@codesourcery.com>
+
 	* src/arch-aarch64.c (aarch64_undo_prelink_rela): Fix missing
 	break.
 
